Display changes when buttons pressed

--- a/Calculator Application - BME 598/Base.lproj/Main.storyboard
+++ b/Calculator Application - BME 598/Base.lproj/Main.storyboard
@@ -29,6 +29,9 @@
                                 <state key="normal" title="1">
                                     <color key="titleColor" red="0.99772443451350401" green="0.98334665831127022" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="ButtonOnePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="d8d-e0-7eI"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RV1-zb-ByD">
                                 <rect key="frame" x="108" y="294" width="75" height="75"/>
@@ -38,6 +41,9 @@
                                 <state key="normal" title="2">
                                     <color key="titleColor" red="0.99772443450000003" green="0.98334665830000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="ButtonTwoPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HoK-tt-L0X"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fDB-Dt-4ak">
                                 <rect key="frame" x="25" y="377" width="75" height="75"/>
@@ -47,6 +53,9 @@
                                 <state key="normal" title="4">
                                     <color key="titleColor" red="0.99772443450000003" green="0.98334665830000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="ButtonFourPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0BU-6a-nl4"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Dc-Lv-eCv">
                                 <rect key="frame" x="108" y="377" width="75" height="75"/>
@@ -56,6 +65,9 @@
                                 <state key="normal" title="5">
                                     <color key="titleColor" red="0.99772443450000003" green="0.98334665830000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="ButtonFivePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ncs-hr-xkK"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Bj-T9-MOA">
                                 <rect key="frame" x="191" y="377" width="75" height="75"/>
@@ -65,6 +77,9 @@
                                 <state key="normal" title="6">
                                     <color key="titleColor" red="0.99772443450000003" green="0.98334665830000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="ButtonSixPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IAa-C3-4VR"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aAl-Ia-aYy">
                                 <rect key="frame" x="25" y="460" width="75" height="75"/>
@@ -74,6 +89,9 @@
                                 <state key="normal" title="7">
                                     <color key="titleColor" red="0.99772443450000003" green="0.98334665830000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="ButtonSevenPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hoe-5W-7RX"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oUm-DB-Hpa">
                                 <rect key="frame" x="108" y="460" width="75" height="75"/>
@@ -83,6 +101,9 @@
                                 <state key="normal" title="8">
                                     <color key="titleColor" red="0.99772443450000003" green="0.98334665830000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="ButtonEightPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9ka-6X-iU8"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3wQ-DQ-heC">
                                 <rect key="frame" x="25" y="543" width="75" height="75"/>
@@ -92,6 +113,9 @@
                                 <state key="normal" title="0">
                                     <color key="titleColor" red="0.99772443450000003" green="0.98334665830000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="ButtonZeroPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eDk-0V-fTI"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bt3-il-a6p">
                                 <rect key="frame" x="108" y="543" width="158" height="75"/>
@@ -110,6 +134,9 @@
                                 <state key="normal" title="9">
                                     <color key="titleColor" red="0.99772443450000003" green="0.98334665830000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="ButtonNinePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MCq-0x-2tQ"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AuN-6o-UfB">
                                 <rect key="frame" x="274" y="294" width="75" height="75"/>
@@ -147,10 +174,11 @@
                                     <color key="titleColor" red="0.99772443450000003" green="0.98334665830000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f2U-3f-ju0">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f2U-3f-ju0">
                                 <rect key="frame" x="36" y="36" width="302" height="186"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="backgroundColor" red="0.9747354044466231" green="0.95494638249848096" blue="0.98383021262025583" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -162,10 +190,26 @@
                                 <state key="normal" title="3">
                                     <color key="titleColor" red="0.99772443450000003" green="0.98334665830000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="ButtonThreePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1ae-Ld-BFH"/>
+                                </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.32527121113989632" green="0.32527121113989632" blue="0.32527121113989632" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="Eight" destination="oUm-DB-Hpa" id="a38-4n-mSg"/>
+                        <outlet property="Five" destination="4Dc-Lv-eCv" id="kU3-Of-k97"/>
+                        <outlet property="Four" destination="fDB-Dt-4ak" id="RGz-ow-D40"/>
+                        <outlet property="Nine" destination="AJ0-4L-Zhg" id="sni-fv-GR9"/>
+                        <outlet property="NumericDisplay" destination="f2U-3f-ju0" id="tEA-46-Yhf"/>
+                        <outlet property="One" destination="J3W-Ty-Q1G" id="t3Q-v2-NTq"/>
+                        <outlet property="Seven" destination="aAl-Ia-aYy" id="qOP-qf-bOl"/>
+                        <outlet property="Three" destination="mRR-Dm-D6Y" id="ez5-bB-dpn"/>
+                        <outlet property="Two" destination="RV1-zb-ByD" id="fLe-pv-TUi"/>
+                        <outlet property="Zero" destination="3wQ-DQ-heC" id="zUW-GS-Kn1"/>
+                        <outlet property="six" destination="8Bj-T9-MOA" id="8VI-a6-nzC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
